--- a/mywebsite/about.qmd
+++ b/mywebsite/about.qmd
@@ -2,4 +2,6 @@
 title: "About"
 ---
 
-About this site
+My name is Harry,
+my favourite food is hotpot.
+I like playing volleyball for my free time.
