--- a/mywebsite/index.qmd
+++ b/mywebsite/index.qmd
@@ -2,6 +2,5 @@
 title: "mywebsite"
 ---
 
-This is a Quarto website.
+This is Harry's website
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
